Refactor: 응답 형식 수정 및 코드 리팩토링