@@ -8,8 +8,6 @@ import depth.main.ideac.domain.club_post.repository.ClubPostImageRepository;
 import depth.main.ideac.domain.club_post.repository.ClubPostRepository;
 import depth.main.ideac.domain.club_post.dto.ClubPostDetailRes;
 import depth.main.ideac.domain.club_post.dto.UpdateClubPostReq;
-import depth.main.ideac.domain.project_post.ProjectPost;
-import depth.main.ideac.domain.project_post.ProjectPostImage;
 import depth.main.ideac.domain.user.domain.Role;
 import depth.main.ideac.domain.user.domain.User;
 import depth.main.ideac.global.error.DefaultException;
@@ -27,7 +25,6 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -40,7 +37,7 @@ public class ClubPostService {
     
     // 전체 조회
     public Page<ClubPostRes> getAllClubPosts(Pageable pageable) {
-        Page<ClubPost> posts = clubPostRepository.findAllByOrderByCreatedAtDesc(pageable);
+        Page<ClubPost> posts = clubPostRepository.findAll(pageable);
 
         List<ClubPostRes> clubPostResList = posts.getContent().stream()
                 .map(clubPost -> ClubPostRes.builder()
@@ -48,29 +45,20 @@ public class ClubPostService {
                         .description(clubPost.getDetailedDescription())
                         .createdAt(clubPost.getCreatedAt())
                         .nickname(clubPost.getUser().getNickname())
+                        .thumbnail(clubPost.getClubPostImages().stream()
+                                .filter(ClubPostImage::isThumbnail)
+                                .findFirst()
+                                .map(ClubPostImage::getImagePath).orElse(null))
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageImpl<>(clubPostResList, pageable, posts.getTotalElements());
-    }
-
-    private ClubPostRes convertToClubPostRes(ClubPost clubPost) {
-        return ClubPostRes.builder()
-                .title(clubPost.getTitle())
-                .description(clubPost.getDetailedDescription())
-                .createdAt(clubPost.getCreatedAt())
-                .nickname(clubPost.getUser().getNickname())
-                .thumbnail(clubPost.getClubPostImages().stream()
-                        .filter(ClubPostImage::isThumbnail)
-                        .findFirst()
-                        .map(ClubPostImage::getImagePath).orElse(null))
-                .build();
     }
 
     // 상세 조회
     public ClubPostDetailRes getDetailClubPosts(Long clubId) {
         ClubPost clubPost = clubPostRepository.findById(clubId)
-                .orElseThrow(() -> new DefaultException(ErrorCode.INVALID_PARAMETER));
+                .orElseThrow(() -> new DefaultException(ErrorCode.CONTENTS_NOT_FOUND));
 
         String thumbnailPath = clubPost.getClubPostImages().stream()
                 .filter(ClubPostImage::isThumbnail)
@@ -95,9 +83,9 @@ public class ClubPostService {
     }
 
     @Transactional
-    public ClubPostDetailRes createClubPost(Long userId, ClubPostReq clubPostReq, List<MultipartFile> images) throws IOException {
+    public Long createClubPost(Long userId, ClubPostReq clubPostReq, List<MultipartFile> images) throws IOException {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new DefaultException(ErrorCode.INVALID_PARAMETER));
+                .orElseThrow(() -> new DefaultException(ErrorCode.USER_NOT_FOUND));
 
         ClubPost clubPost = ClubPost.builder()
                 .title(clubPostReq.getTitle())
@@ -111,22 +99,15 @@ public class ClubPostService {
 
         clubPostRepository.save(clubPost);
 
-        return ClubPostDetailRes.builder()
-                .title(clubPost.getTitle())
-                .description(clubPost.getDetailedDescription())
-                .url1(clubPost.getUrl1())
-                .url2(clubPost.getUrl2())
-                .nickname(clubPost.getUser().getNickname())
-                .createdAt(clubPost.getCreatedAt())
-                .build();
+        return clubPost.getId();
     }
 
     // 글 수정
     @Transactional
-    public ClubPostDetailRes updateClubPost(Long clubPostId, UpdateClubPostReq updateClubPostReq, List<MultipartFile> images) throws IOException {
+    public void updateClubPost(Long clubPostId, UpdateClubPostReq updateClubPostReq, List<MultipartFile> images) throws IOException {
 
         ClubPost clubPost = clubPostRepository.findById(clubPostId)
-                .orElseThrow(() -> new DefaultException(ErrorCode.INVALID_PARAMETER));
+                .orElseThrow(() -> new DefaultException(ErrorCode.CONTENTS_NOT_FOUND));
 
         clubPost.setTitle(updateClubPostReq.getTitle());
         clubPost.setDetailedDescription(updateClubPostReq.getDescription());
@@ -135,21 +116,13 @@ public class ClubPostService {
         
         this.deleteFile(clubPostId);
         this.uploadFile(clubPost, images);
-        return ClubPostDetailRes.builder()
-                .title(clubPost.getTitle())
-                .description(clubPost.getDetailedDescription())
-                .url1(clubPost.getUrl1())
-                .url2(clubPost.getUrl2())
-                .nickname(clubPost.getUser().getNickname())
-                .createdAt(clubPost.getCreatedAt())
-                .build();
     }
 
     // 글 삭제
     @Transactional
     public void deleteClubPost(Long clubPostId) {
         ClubPost clubPost = clubPostRepository.findById(clubPostId)
-                .orElseThrow(() -> new DefaultException(ErrorCode.INVALID_PARAMETER));
+                .orElseThrow(() -> new DefaultException(ErrorCode.CONTENTS_NOT_FOUND));
         this.deleteFile(clubPostId);
         clubPostRepository.delete(clubPost);
     }
@@ -157,10 +130,10 @@ public class ClubPostService {
     // 로그인한 사용자가 관리자인지 작성자 본인인지 확인하는 메소드
     public boolean isAdminOrWriter(Long clubPostId, Long userId) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new DefaultException(ErrorCode.INVALID_PARAMETER));
+                .orElseThrow(() -> new DefaultException(ErrorCode.USER_NOT_FOUND));
 
         ClubPost clubPost = clubPostRepository.findById(clubPostId)
-                .orElseThrow(() -> new DefaultException(ErrorCode.INVALID_PARAMETER));
+                .orElseThrow(() -> new DefaultException(ErrorCode.CONTENTS_NOT_FOUND));
 
         boolean isAdmin = user.getRole() == Role.ADMIN || user.getRole() == Role.OWNER ;
         boolean isWriter = clubPost.getUser().getId().equals(userId);
